docs/1.18/api/interfaces/maanalyticsinfo.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / MAAnalyticsInfo

# Interface: MAAnalyticsInfo

Mini App Analytics info type

## Hierarchy

* **MAAnalyticsInfo**

## Index

### Properties

* [actionType](maanalyticsinfo.md#actiontype)
* [componentName](maanalyticsinfo.md#componentname)
* [data](maanalyticsinfo.md#data)
* [elementType](maanalyticsinfo.md#elementtype)
* [eventType](maanalyticsinfo.md#eventtype)
* [pageName](maanalyticsinfo.md#pagename)

## Properties

### actionType

•  **actionType**: [MAAnalyticsActionType](../enums/maanalyticsactiontype.md)

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:27](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L27)*

___

### componentName

•  **componentName**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:29](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L29)*

___

### data

•  **data**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:31](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L31)*

___

### elementType

•  **elementType**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:30](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L30)*

___

### eventType

•  **eventType**: [MAAnalyticsEventType](../enums/maanalyticseventtype.md)

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:26](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L26)*

___

### pageName

•  **pageName**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:28](https://github.com/rakutentech/js-miniapp/blob/2f882c8/js-miniapp-bridge/src/types/analytics/analytics.ts#L28)*
