docs/1.21/api/interfaces/maanalyticsinfo.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / MAAnalyticsInfo

# Interface: MAAnalyticsInfo

Mini App Analytics info type

## Hierarchy

* **MAAnalyticsInfo**

## Index

### Properties

* [accountId](maanalyticsinfo.md#accountid)
* [actionType](maanalyticsinfo.md#actiontype)
* [applicationId](maanalyticsinfo.md#applicationid)
* [componentName](maanalyticsinfo.md#componentname)
* [customerId](maanalyticsinfo.md#customerid)
* [data](maanalyticsinfo.md#data)
* [elementType](maanalyticsinfo.md#elementtype)
* [eventType](maanalyticsinfo.md#eventtype)
* [genre](maanalyticsinfo.md#genre)
* [pageName](maanalyticsinfo.md#pagename)
* [ssc](maanalyticsinfo.md#ssc)

## Properties

### accountId

• `Optional` **accountId**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:36](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L36)*

___

### actionType

•  **actionType**: [MAAnalyticsActionType](../enums/maanalyticsactiontype.md)

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:28](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L28)*

___

### applicationId

• `Optional` **applicationId**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:37](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L37)*

___

### componentName

•  **componentName**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:30](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L30)*

___

### customerId

• `Optional` **customerId**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:35](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L35)*

___

### data

•  **data**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:32](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L32)*

___

### elementType

•  **elementType**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:31](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L31)*

___

### eventType

•  **eventType**: [MAAnalyticsEventType](../enums/maanalyticseventtype.md)

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:27](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L27)*

___

### genre

• `Optional` **genre**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:34](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L34)*

___

### pageName

•  **pageName**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:29](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L29)*

___

### ssc

• `Optional` **ssc**: string

*Defined in [js-miniapp-bridge/src/types/analytics/analytics.ts:33](https://github.com/rakutentech/js-miniapp/blob/e6e9208/js-miniapp-bridge/src/types/analytics/analytics.ts#L33)*
